force-app/main/default/objects/Library__c/Library__c.object-meta.xml
<CustomObject>
    <label>Library</label>
    <nameField>
        <label>Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>