force-app/main/default/objects/Library__c/fields/isFinePaid__c.field-meta.xml
<CustomField>
    <fullName>isFinePaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFinePaid</label>
    <type>Checkbox</type>
</CustomField>