force-app/main/default/objects/Library__c/fields/Library_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Library_Request_Body__c</fullName>
    <label>Library Request Body</label>
    <type>TextArea</type>
</CustomField>