force-app/main/default/objects/Library__c/fields/Library_Response__c.field-meta.xml
<CustomField>
    <fullName>Library_Response__c</fullName>
    <label>Library Response</label>
    <type>TextArea</type>
</CustomField>