force-app/main/default/objects/Library__c/fields/Pay_Fine__c.field-meta.xml
<CustomField>
    <fullName>Pay_Fine__c</fullName>
    <label>Pay Fine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>